--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.services.authentication": "3.1.0",
     "com.unity.services.lobby": "1.1.0",
     "com.unity.services.relay": "1.0.5",
+    "com.unity.services.vivox": "15.1.210000-pre.1",
     "com.unity.shadergraph": "14.0.8",
     "com.unity.sysroot": "2.0.7",
     "com.unity.sysroot.linux-x86_64": "2.0.6",
