--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.inputsystem": "1.6.3",
     "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
     "com.unity.netcode.gameobjects": "1.5.2",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.core": "14.0.8",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.services.authentication": "3.1.0",
